--- a/wp/wp-content/themes/falcon_theme/style.css
+++ b/wp/wp-content/themes/falcon_theme/style.css
@@ -136,7 +136,17 @@ header nav ul li a:hover {
 	font-size: .8rem;
 	font-weight: 500;
 	margin-bottom: 10px;
-	color: #777777
+	color: #777777;
+	display: inline-block;
+	margin-right: 10px;
+}
+
+#main #slideshow article .post-categories {
+	font-family:  "Raleway", helvetica, arial, sans-serif;
+	font-size: .8rem;
+	font-weight: 500;
+	display: inline-block;
+	list-style: none;
 }
 
 #main #slideshow .slidesjs-pagination li {
